--- a/lib/hell/views/index.erb
+++ b/lib/hell/views/index.erb
@@ -51,7 +51,7 @@
 
             <div class="tab-pane active" id="run">
               <form action="/" class="form-inline row-fluid" autocomplete="off">
-                <input type="text" name="name" class="cap-command input-xlarge" placeholder="task to run ex: restart:mobile_listingfeed" autocomplete="off">
+                <input type="text" name="name" class="cap-command input-xlarge" placeholder="task to run ex: deploy" autocomplete="off">
 
                 <div class="btn-group environment" data-toggle="buttons-radio">
                   <% unless @require_env %>
