--- a/stylesheets/css3.css
+++ b/stylesheets/css3.css
@@ -1,11 +1,7 @@
 a.view-github{-webkit-border-radius: 5px;
               -moz-border-radius: 5px;
               border-radius: 5px;
-              position: relative;
-              text-shadow: 0px -2px 1px #b34402;
-              filter: dropshadow(color=#b34402, offx=0, offy=-1);
-
-
+              text-shadow: 0px -1px 0 rgba(195,103,4,.9);
 }
 .body-text li span,.right-div p{
     text-shadow: 0px 1px 1px #000;
@@ -14,5 +10,5 @@ a.view-github{-webkit-border-radius: 5px;
 
 h2{
     text-shadow: 0px 1px 1px #3b0202;
-              filter: dropshadow(color=#b34402, offx=0, offy=-1);
+              filter: dropshadow(color=#480404, offx=0, offy=-1);
 }
