--- a/stylesheets/css3.css
+++ b/stylesheets/css3.css
@@ -1,7 +1,7 @@
 a.view-github{-webkit-border-radius: 5px;
               -moz-border-radius: 5px;
               border-radius: 5px;
-              text-shadow: 0px -1px 0 rgba(195,103,4,.9);
+text-shadow: 0 -1px 1px rgba(154, 81, 2, 0.9);
 }
 .body-text li span,.right-div p{
     text-shadow: 0px 1px 1px #000;
@@ -9,6 +9,6 @@ a.view-github{-webkit-border-radius: 5px;
 }
 
 h2{
-    text-shadow: 0px 1px 1px #3b0202;
+    text-shadow: 0px 1px 1px #570808;
               filter: dropshadow(color=#480404, offx=0, offy=-1);
 }
