--- a/stylesheets/css3.css
+++ b/stylesheets/css3.css
@@ -9,6 +9,6 @@ text-shadow: 0 -1px 1px rgba(154, 81, 2, 0.9);
 }
 
 h2{
-    text-shadow: 0px 1px 1px #570808;
+    text-shadow: 0px 1px 2px #620c0c;
               filter: dropshadow(color=#480404, offx=0, offy=-1);
 }
