added missing pusher js integration

--- a/lib/hell/views/index.erb
+++ b/lib/hell/views/index.erb
@@ -125,6 +125,7 @@
       HellApp.pusher_secret = <%= json_encode(@pusher_secret) %>;
     </script>
 
+    <script src="http://js.pusher.com/1.12/pusher.min.js"></script>
     <%= js :jquery %>
     <script src="<%= @www_base_dir %>assets/js/bootstrap.js"></script>
     <script src="<%= @www_base_dir %>assets/js/underscore.js"></script>
